test: added tests to ensure image for each scoop options are retrieves from the server on project 02

--- a/02-sundaes-on-demand/.eslintrc.json
+++ b/02-sundaes-on-demand/.eslintrc.json
@@ -20,7 +20,8 @@
     },
     "plugins": [
       "testing-library",
-      "jest-dom"
+      "jest-dom",
+      "react-hooks"
     ],
     "env": {
       "browser": true,
@@ -43,6 +44,8 @@
       "no-shadow": "off",
       "react/react-in-jsx-scope": "off",
       "react/jsx-one-expression-per-line": "off",
-      "react/jsx-curly-newline": "off"
+      "react/jsx-curly-newline": "off",
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn"
     }
   }
