chore: adding typescript to check js errors

--- a/02-sundaes-on-demand/src/jsconfig.json
+++ b/02-sundaes-on-demand/src/jsconfig.json
@@ -3,5 +3,9 @@
         "include": [
             "jest"
         ]
+    },
+    "compilerOptions": {
+        "jsx": "react",
+        "checkJs": true
     }
 }
